# skills

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  REORG.md
.claude-plugin/: marketplace.json  plugin.json
skills/analyst/: .gitignore  SKILL.md  SPEC.md  pyproject.toml
skills/analyst/analyst/: __init__.py  plugin.py
skills/analyst/experiments/: __init__.py
skills/analyst/kicho/: __init__.py
skills/analyst/references/: playbook.md
skills/analyst/scripts/: new-unit.sh  rollup.py
skills/analyst/tests/: test_docref.py
skills/archivist/: ROADMAP.md  SKILL.md  pyproject.toml
skills/archivist/evals/: evals.json
skills/archivist/references/: auditing.md  vocab.example.yml
skills/archivist/scripts/: _audit.py  _experiment.py  _extract.py  _files.py  _generate.py  _intake.py  _meta.py  _pr.py  _store.py  arx.py
skills/archivist/tests/: conftest.py  test_audit.py  test_experiment.py  test_extract.py  test_files.py  test_generate.py  test_intake.py  test_meta.py  test_store.py
skills/archivist/tools/drive-sync/: README.md  drive-sync.swift  install.sh  uninstall.sh
skills/archivist/tools/git-autosync/: README.md  git-autosync.swift  install.sh
skills/bibliographer/: SKILL.md  pyproject.toml
skills/bibliographer/evals/: evals.json
skills/bibliographer/references/: auditing.md  getting-pdfs.md  libkit-integration.md  schema.md
skills/bibliographer/scripts/: _fileorg.py  _meta.py  _resolvers.py  _store.py  _viewer.py  bib.py
skills/bibliographer/tests/: conftest.py  test_fileorg.py  test_meta.py  test_resolvers.py  test_store.py  test_viewer.py
skills/extractor/: SKILL.md
skills/extractor/references/: naming.md  recipes.md
skills/extractor/scripts/: _readers.py  audit.py  cellcov.py  extract.py
skills/extractor/tests/: conftest.py  test_prism.py
skills/scientist/: ROADMAP.md  SKILL.md  SPEC.md  pyproject.toml
skills/scientist/analyst/: __init__.py  plugin.py
skills/scientist/experiments/: __init__.py
skills/scientist/extraction/: __init__.py  audit.py  engine.py
skills/scientist/labfiles/: __init__.py  _readers.py
skills/scientist/provenance/: __init__.py  trace.py
skills/scientist/references/: auditing.md  derive-claims.md  extract.md  naming.md  playbook.md  recipes.md  report.md  review-audit.md  search-index.md  vocab.example.yml
skills/scientist/scientist/: __init__.py
skills/scientist/scientist/experiments/: __init__.py
skills/scientist/scientist/extraction/: audit.py  cellcov.py  engine.py
skills/scientist/scientist/grounding/: __init__.py  plugin.py
skills/scientist/scientist/labfiles/: __init__.py
skills/scientist/scientist/provenance/: report.py  reproduce.py  trace.py
skills/scientist/scientist/report/: __init__.py
skills/scientist/scientist/store/: __init__.py  _audit.py  _extract.py  _generate.py  _intake.py  _meta.py  _pr.py  _prose.py  _store.py  cli.py
skills/scientist/scripts/: new-unit.sh  rollup.py  sci.py
skills/scientist/store/: __init__.py  _audit.py  _extract.py  _files.py  _meta.py  _store.py  cli.py
skills/scientist/tests/: conftest.py  test_audit.py  test_derivation.py  test_docref.py  test_extract.py  test_files.py  test_generate.py  test_intake.py  test_meta.py  test_prism.py  test_prose.py  test_provenance.py  test_report.py  test_reproduce.py  test_store.py  test_store_dir.py  test_trace.py
tools/git-autosync/: uninstall.sh
